--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -105,6 +105,25 @@
 .tile-body strong {
   font-weight: 400;
 }
+
+.eventbox {
+  .tiles-x .tile-img {
+    overflow: initial;
+    position: relative;
+  }
+}
+
+.date-ribbon {
+  position: absolute;
+  bottom: -10px;
+  right: 11px;
+  background-color: #901a1e;
+  color: #fff;
+  padding: 6px 8px;
+  font-weight: 700;
+  display: inline-block;
+  border-radius: 2px;
+}
 @media all and (min-width: @screen-sm) {
   .tiles-y {
     .tiles-y-desktop-layout();
