--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -248,7 +248,7 @@ body:not(.FullWidthFrontpage) .double-column {
   }
 }
 @media all and (min-width: @screen-sm) {
-  .newsbox {
+  .newsbox, .eventbox {
     padding-bottom: 8px;
     // Inserted as standalone grid element
     .tiles-x {
