--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -117,8 +117,8 @@
   position: absolute;
   bottom: -10px;
   right: 11px;
-  background-color: #901a1e;
-  color: #fff;
+  background-color: @red2;
+  color: @gridbox-text-light;
   padding: 6px 8px;
   font-weight: 700;
   display: inline-block;
