Tweak medium green color

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -381,7 +381,7 @@
   }
 
   &-green2 {
-    .gridbox-color(@gridbox-text-light; @green2; darken(@green2, 5%); @green2; @green2; 83%);
+    .gridbox-color(@white-color; @green2; darken(@green2, 5%); @green2; @green2; 83%);
   }
 
   &-green3 {
