Gridbox img width for Firefox

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -80,6 +80,7 @@
 
       img {
         // Img inside the box adjusted by height and centered
+        width: 100%;
         flex: none;
         display: block;
         -ms-interpolation-mode: bicubic;
