Updated slider scripts for front page

--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5985,7 +5985,7 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
  }
 
  .gridcontent .full-page-width {
-   width: auto;
+   width: auto!important;
  }
 
  .gridcontent .full-page-width>.container {
