New color for warning banner

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -218,7 +218,7 @@
 // Beredskabsbanner
 
 #warning-banner {
-  background-color: @beredsskabs-banner-bg;
+  background-color: @white2;
   padding: 0;
   position: relative;
   width: 100%;
