--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -230,7 +230,8 @@
   margin: 0 auto;
   padding: 10px 0;
   font-size: 14px;
-  @media (max-width: @screen-sm-max) {
+  padding: 10px 60px 10px 10px;
+  @media (min-width: @screen-sm) {
     padding: 10px;
   }
 
