--- a/less/type.less
+++ b/less/type.less
@@ -414,7 +414,7 @@ blockquote {
     display: block;
     font-size: 80%; // back to default font-size
     line-height: @line-height-base;
-    color: @blockquote-small-color;
+    //color: @blockquote-small-color;
 
     &:before {
       content: '\2014 \00A0'; // em dash, nbsp
