Cookie test color

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -275,6 +275,7 @@
   position: relative;
   min-height: 150px;
   background-color: @well-bg;
+  color: @text-color;
   border: 1px solid @well-border;
   padding: 15px;
   margin-bottom: @grid-gutter-by-half;
