--- a/docs/legacy/css/style.css
+++ b/docs/legacy/css/style.css
@@ -8568,6 +8568,7 @@ ul.sf-menu li a:hover {
   padding: 15px;
   margin-bottom: 13px;
   background-color: #f5f5f5;
+  color: #252525;
   border: 1px solid #e3e3e3;
   border-radius: 2px;
 }
