--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -232,7 +232,7 @@
   font-size: 14px;
   padding: 10px 60px 10px 10px;
   @media (min-width: @screen-sm) {
-    padding: 10px;
+    padding: 8px;
   }
 
   h1 {
@@ -251,6 +251,16 @@
     font-size: 26px;
     font-weight: 400;
     margin: 0 0 10px;
+  }
+
+  p {
+    &:first-child {
+      margin-bottom: 5px;
+    }
+
+    &:last-child {
+      margin-bottom: 5px;
+    }
   }
 }
 // Faktaboks
