--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -232,7 +232,7 @@
   font-size: 14px;
   padding: 10px 60px 10px 10px;
   @media (min-width: @screen-sm) {
-    padding: 8px;
+    padding: 8px 8px 8px 0;
   }
 
   h1 {
