--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -218,7 +218,8 @@
 // Beredskabsbanner
 
 #warning-banner {
-  background-color: @white2;
+  background-color: @red3;
+  color: @white-color;
   padding: 0;
   position: relative;
   width: 100%;
@@ -251,6 +252,10 @@
     font-size: 26px;
     font-weight: 400;
     margin: 0 0 10px;
+  }
+
+  a, a:visited {
+    color: inherit;
   }
 
   p {
