--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -254,7 +254,8 @@
     margin: 0 0 10px;
   }
 
-  a, a:visited {
+  a,
+  a:visited {
     color: inherit;
   }
 
@@ -272,6 +273,7 @@
 .icon-corona {
   height: 21px;
   width: 21px;
+  vertical-align: bottom;
 }
 // Faktaboks
 
