Global news image size

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -384,6 +384,7 @@
         }
 
         img {
+          max-width: 115px;
           display: block;
           float: left;
           margin: 0 8px 5px 0;
