Warning banner padding

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -232,7 +232,7 @@
   padding: 10px 0;
   font-size: 14px;
   padding: 10px 60px 10px 10px;
-  @media (min-width: @screen-sm) {
+  @media (min-width: @screen-md-min) {
     padding: 5px 8px 5px 0;
   }
 
