--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -226,18 +226,15 @@
 }
 
 #warning-banner-inner {
-  // text-align: left;
-  // max-width: 1018px;
-  // margin: 0 auto;
-  // padding: 10px 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
   font-size: 14px;
-  // padding: 10px 60px 10px 10px;
-  // @media (min-width: @screen-sm-min) and (max-width: @screen-md-max) and (orientation: portrait) {
-  //   padding: 10px 10px 10px 26px;
-  // }
-  // @media (min-width: @screen-lg-min) {
-  //   padding: 5px 8px 5px 0;
-  // }
+  @media (max-width: @screen-sm-max) {
+    & > .container {
+      padding-left: @grid-gutter-by-half;
+      padding-right: @grid-gutter-by-half;
+    }
+  }
 
   h1 {
     padding: 0;
