Global menu alignment

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -30,7 +30,7 @@
   font-size: 1em;
   @media (min-width: @screen-sm-min) and (max-width: 1024px) {
     & > .container {
-      padding-left: @grid-gutter-by-half;
+      padding-left: @grid-gutter-width;
     }
   }
 
@@ -869,7 +869,7 @@
       background-image: url("https://bootstrap.secure.ku.dk/img/toplogo_uk.svg");
     }
     @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
-      left: 15px;
+      left: @grid-gutter-width;
       top: 8px;
       width: 37%;
     }
