--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -229,7 +229,7 @@
   padding-top: 5px;
   padding-bottom: 5px;
   font-size: 14px;
-  @media (max-width: @screen-sm-max) {
+  @media (max-width: @screen-xs-max) {
     & > .container {
       padding-left: @grid-gutter-by-half;
       padding-right: @grid-gutter-by-half;
