--- a/less/navbar.less
+++ b/less/navbar.less
@@ -869,7 +869,7 @@
       background-image: url("https://bootstrap.secure.ku.dk/img/toplogo_uk.svg");
     }
     @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
-      left: @grid-gutter-width;
+      left: 23px;
       top: 8px;
       width: 37%;
     }
