--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -226,8 +226,7 @@
 }
 
 #warning-banner-inner {
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 5px 40px 5px 0;
   font-size: 14px;
   @media (max-width: @screen-xs-max) {
     & > .container {
