--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -226,7 +226,7 @@
 }
 
 #warning-banner-inner {
-  padding: 5px 40px 5px 0;
+  padding: 5px 40px 5px auto;
   font-size: 14px;
   @media (max-width: @screen-xs-max) {
     & > .container {
