--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -226,9 +226,9 @@
 }
 
 #warning-banner-inner {
-  padding: 5px 40px 5px auto;
   font-size: 14px;
   @media (max-width: @screen-xs-max) {
+    padding: 5px 40px 5px 0;
     & > .container {
       padding-left: @grid-gutter-by-half;
       padding-right: @grid-gutter-by-half;
