--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -7,8 +7,9 @@
   line-height: @line-height-small;
 
   .ku-navbar-header {
-    font-weight: bold;
-    line-height: 1.2;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.3;
     margin-bottom: 14px;
     padding-left: 15px;
     position: relative;
@@ -50,7 +51,7 @@
 
       a {
         color: @gray-dark;
-        font-size: 1em;
+        font-size: 14px;
         text-decoration: none;
         padding: 3px 5px 3px 15px;
         position: relative;
