--- a/less/navbar.less
+++ b/less/navbar.less
@@ -27,7 +27,7 @@
 }
 
 .ku-nav {
-  font-size: 1em;
+  font-size: 15px;
   @media (min-width: @screen-sm-min) and (max-width: 1024px) {
     & > .container {
       padding-left: @grid-gutter-width;
