--- a/less/variables.less
+++ b/less/variables.less
@@ -30,7 +30,7 @@
 @ku-light-grey:          #606060;
 @ku-search-icons:        @gray-666;
 @ku-news-gray:           #4a4949;
-@ku-footer-icon-bg:      #757575;
+@ku-footer-icon-bg:      @gray-666;
 @ku-footer-icon-size:    28px;
 
 // KU specific colors
