Removing old color variables

--- a/less/variables.less
+++ b/less/variables.less
@@ -90,59 +90,59 @@
 
 // Faculty sub colors
 //Science
-@science-sub_1: #dfaf48;
-@science-sub_1-hover: darken(@science-sub_1, 5%);
-@science-sub_2: #a4c1a9;
-@science-sub_2-hover: darken(@science-sub_2, 5%);
-@science-sub_3: #bea986;
-@science-sub_3-hover: darken(@science-sub_3, 5%);
-@science-sub_4: #85a8ae;
-@science-sub_4-hover: darken(@science-sub_4, 5%);
+// @science-sub_1: #dfaf48;
+// @science-sub_1-hover: darken(@science-sub_1, 5%);
+// @science-sub_2: #a4c1a9;
+// @science-sub_2-hover: darken(@science-sub_2, 5%);
+// @science-sub_3: #bea986;
+// @science-sub_3-hover: darken(@science-sub_3, 5%);
+// @science-sub_4: #85a8ae;
+// @science-sub_4-hover: darken(@science-sub_4, 5%);
 //Hum
-@hum-sub_1: #1d2e4a;
-@hum-sub_1-hover: darken(@hum-sub_1, 5%);
-@hum-sub_2: #3e3d40;
-@hum-sub_2-hover: darken(@hum-sub_2, 5%);
-@hum-sub_3: #677389;
-@hum-sub_3-hover: darken(@hum-sub_3, 5%);
-@hum-sub_4: #dB3B0a;
-@hum-sub_4-hover: darken(@hum-sub_4, 5%);
+// @hum-sub_1: #1d2e4a;
+// @hum-sub_1-hover: darken(@hum-sub_1, 5%);
+// @hum-sub_2: #3e3d40;
+// @hum-sub_2-hover: darken(@hum-sub_2, 5%);
+// @hum-sub_3: #677389;
+// @hum-sub_3-hover: darken(@hum-sub_3, 5%);
+// @hum-sub_4: #dB3B0a;
+// @hum-sub_4-hover: darken(@hum-sub_4, 5%);
 //Teol
-@teol-sub_1: #c85204;
-@teol-sub_1-hover: darken(@teol-sub_1, 5%);
-@teol-sub_2: #093f50;
-@teol-sub_2-hover: darken(@teol-sub_2, 5%);
-@teol-sub_3: #3b7d8c;
-@teol-sub_3-hover: darken(@teol-sub_3, 5%);
-@teol-sub_4: #23499b;
-@teol-sub_4-hover: darken(@teol-sub_4, 5%);
+// @teol-sub_1: #c85204;
+// @teol-sub_1-hover: darken(@teol-sub_1, 5%);
+// @teol-sub_2: #093f50;
+// @teol-sub_2-hover: darken(@teol-sub_2, 5%);
+// @teol-sub_3: #3b7d8c;
+// @teol-sub_3-hover: darken(@teol-sub_3, 5%);
+// @teol-sub_4: #23499b;
+// @teol-sub_4-hover: darken(@teol-sub_4, 5%);
 //Sund
-@sund-sub_1: #3b6bb2;
-@sund-sub_1-hover: darken(@sund-sub_1, 5%);
-@sund-sub_2: #0f4576;
-@sund-sub_2-hover: darken(@sund-sub_2, 5%);
-@sund-sub_3: #00706e;
-@sund-sub_3-hover: darken(@sund-sub_3, 5%);
-@sund-sub_4: #054341;
-@sund-sub_4-hover: darken(@sund-sub_4, 5%);
+// @sund-sub_1: #3b6bb2;
+// @sund-sub_1-hover: darken(@sund-sub_1, 5%);
+// @sund-sub_2: #0f4576;
+// @sund-sub_2-hover: darken(@sund-sub_2, 5%);
+// @sund-sub_3: #00706e;
+// @sund-sub_3-hover: darken(@sund-sub_3, 5%);
+// @sund-sub_4: #054341;
+// @sund-sub_4-hover: darken(@sund-sub_4, 5%);
 //Samf
-@samf-sub_1: #2a3d66;
-@samf-sub_1-hover: darken(@samf-sub_1, 5%);
-@samf-sub_2: #598000;
-@samf-sub_2-hover: darken(@samf-sub_2, 5%);
-@samf-sub_3: #4f7d71;
-@samf-sub_3-hover: darken(@samf-sub_3, 5%);
-@samf-sub_4: #6c797a;
-@samf-sub_4-hover: darken(@samf-sub_4, 5%);
+// @samf-sub_1: #2a3d66;
+// @samf-sub_1-hover: darken(@samf-sub_1, 5%);
+// @samf-sub_2: #598000;
+// @samf-sub_2-hover: darken(@samf-sub_2, 5%);
+// @samf-sub_3: #4f7d71;
+// @samf-sub_3-hover: darken(@samf-sub_3, 5%);
+// @samf-sub_4: #6c797a;
+// @samf-sub_4-hover: darken(@samf-sub_4, 5%);
 //Jura
-@jura-sub_1: #c85204;
-@jura-sub_1-hover: darken(@jura-sub_1, 5%);
-@jura-sub_2: #327f86;
-@jura-sub_2-hover: darken(@jura-sub_2, 5%);
-@jura-sub_3: #677967;
-@jura-sub_3-hover: darken(@jura-sub_3, 5%);
-@jura-sub_4: #a3650c;
-@jura-sub_4-hover: darken(@jura-sub_4, 5%);
+// @jura-sub_1: #c85204;
+// @jura-sub_1-hover: darken(@jura-sub_1, 5%);
+// @jura-sub_2: #327f86;
+// @jura-sub_2-hover: darken(@jura-sub_2, 5%);
+// @jura-sub_3: #677967;
+// @jura-sub_3-hover: darken(@jura-sub_3, 5%);
+// @jura-sub_4: #a3650c;
+// @jura-sub_4-hover: darken(@jura-sub_4, 5%);
 
 // Social media colors
 
