Cookie popup tweaks

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -129,7 +129,7 @@
 
 .ccc-select-description {
   display: block;
-  @media all and (min-width: @screen-sm-max) {
+  @media all and (max-width: @screen-xs-max) {
     margin-bottom: @grid-gutter-by-half;
   }
 }
