--- a/docs/legacy/css/style.css
+++ b/docs/legacy/css/style.css
@@ -8301,7 +8301,7 @@ ul.sf-menu li a:hover {
 .ccc-popup {
   margin: 0 auto;
   height: 100%;
-  padding-bottom: 23px;
+  padding: 13px 23px;
 }
 
 @media all and (min-width: 768px) {
@@ -8426,6 +8426,12 @@ ul.sf-menu li a:hover {
   display: block;
 }
 
+@media (max-width: 767px) {
+  .ccc-select-description {
+    margin-bottom: 13px;
+  }
+}
+
 .ccc-list-actions {
   display: -ms-flexbox;
   display: flex;
@@ -8438,7 +8444,7 @@ ul.sf-menu li a:hover {
   position: relative;
   display: block;
   padding-left: 30px !important;
-  margin: 6px 4px 12px 0;
+  margin: 4px 4px 12px 0;
   font-size: 22px;
   cursor: default !important;
   -webkit-user-select: none;
@@ -8494,7 +8500,6 @@ ul.sf-menu li a:hover {
   display: none;
   height: 218px;
   overflow-y: scroll;
-  background-color: #fff;
   -webkit-overflow-scrolling: touch;
   transition: height .4s ease;
 }
