--- a/docs/legacy/css/style.css
+++ b/docs/legacy/css/style.css
@@ -8424,11 +8424,21 @@ ul.sf-menu li a:hover {
 
 .ccc-select-description {
   display: block;
+  font-size: 16px;
+  color: #fff;
+  text-align: left;
+  letter-spacing: .7px;
 }
 
 @media (max-width: 767px) {
   .ccc-select-description {
     margin-bottom: 13px;
+  }
+}
+
+@media (max-width: 767px) {
+  .hidden-xs {
+    display: none !important;
   }
 }
 
