Cookie popup tweaks

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -1,7 +1,10 @@
-// KU cookie accept box1
-// .ccc.popup-open {
-//   overflow: hidden;
-// }
+// KU cookie accept box
+@media all and (max-width: @screen-xs-max) {
+  // Prevent scrolling behind popup
+  .ccc.popup-open {
+    overflow: hidden;
+  }
+}
 
 .ccc {
   position: fixed;
