--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -1,4 +1,4 @@
-// KU cookie accept box1
+// KU cookie accept box
 @media all and (max-width: @screen-xs-max) {
   // Prevent scrolling behind popup
   .ccc.popup-open {
