--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -1,7 +1,7 @@
 // KU cookie accept box
 @media all and (max-width: @screen-xs-max) {
   // Prevent scrolling behind popup
-  .ccc.popup-open {
+  body.popup-open {
     overflow: hidden;
   }
 }
