Cookie popup page scrolling

--- a/docs/legacy/css/style.css
+++ b/docs/legacy/css/style.css
@@ -8253,10 +8253,12 @@ ul.sf-menu li a:hover {
 
 /* Custom cookie popup */
 @media all and (max-width: 767px) {
-    body.popup-open {
-        overflow:hidden
-    }
+  body.ccc-pop-open {
+    overflow: hidden;
+    position: fixed;
+  }
 }
+
 .ccc {
   font-size: 13px;
   font-style: normal;
