--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -1,8 +1,9 @@
 // KU cookie accept box
 @media all and (max-width: @screen-xs-max) {
   // Prevent scrolling behind popup
-  body.popup-open {
+  body.ccc-pop-open {
     overflow: hidden;
+    position: fixed;
   }
 }
 
