--- a/docs/assets/css/content-elements/org-chart.less
+++ b/docs/assets/css/content-elements/org-chart.less
@@ -92,7 +92,7 @@ ol {
     li {
       & > div {
         border: 2px solid @gray;
-        border-radius: 3px;
+        border-radius: @border-radius-base;
         min-height: 2em;
         padding: 0.5em;
 
