Remove fixed height in global menu

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -147,7 +147,8 @@
 
     &.collapse {
       display: block !important;
-      height: @ku-topbar-height !important; // auto
+      // height: @ku-topbar-height !important;
+      height: auto;
       padding-bottom: 0; // Override default setting
       overflow: visible !important;
     }
