--- a/docs/assets/css/content-elements/org-chart.less
+++ b/docs/assets/css/content-elements/org-chart.less
@@ -104,7 +104,9 @@ ol {
           text-decoration: none;
 
           &:hover {
-            background-color: @semi-white;
+            & div {
+              background-color: @semi-white;
+            }
           }
         }
       }
