Well below embedded video

--- a/less/wells.less
+++ b/less/wells.less
@@ -25,6 +25,15 @@
       margin-top: 0;
     }
   }
+
+  & + {
+    // KU specific:
+    // Well below embedded video:
+    [itemprop="video"] {
+      .border-top-radius(0);
+    }
+  }
+
 }
 // Sizes
 
