Well below video

--- a/less/wells.less
+++ b/less/wells.less
@@ -27,7 +27,7 @@
   }
 }
 
-.well + [itemprop="video"] {
+[itemprop="video"] + .well {
   // KU specific:
   // Well below embedded video:
   .border-top-radius(0);
