--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -6041,7 +6041,7 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
 
  /* Remove shortly */
  /* New subsite editing interface - comment for cmstest01*/
- /* #webstedinfo {
+ #webstedinfo {
    position: absolute;
    right: 0;
    width: 23em;
@@ -6114,5 +6114,5 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
 
  #webstedinfo div.no-website-spacer {
    height: 2.5em;
- } */
+ }
  /* end */
