Test Docker setup

--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -6039,7 +6039,7 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    font-size: 16px;
  }
 
- /* Remove shortly task */
+ /* Remove shortly */
  /* New subsite editing interface - comment for cmstest01*/
  #webstedinfo {
    position: absolute;
