--- a/docs/legacy/css/style.css
+++ b/docs/legacy/css/style.css
@@ -8251,7 +8251,7 @@ ul.sf-menu li a:hover {
   color: inherit;
 }
 
-/* Custom cookie popup */
+/* Custom cookie popup styles */
 
 .ccc {
   font-size: 13px;
