--- a/less/mixins/ku-gridbox-colors.less
+++ b/less/mixins/ku-gridbox-colors.less
@@ -29,9 +29,9 @@
       border: 1px solid @hover;
     }
 
-    &::before {
-      color: inherit;
-    }
+    // &::before {
+    //   color: inherit;
+    // }
   }
 
   &.full {
