--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -6043,6 +6043,7 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    border-bottom-right-radius: 2px;
    padding: 15px;
    font-size: 16px;
+   box-shadow: 0 8px 10px 0 rgb(60 60 60 / 10%), 0 2px 6px 0 rgb(64 64 64 / 19%);
  }
 
  /* Remove shortly */
