Transition background on gridboxes

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -20,6 +20,7 @@
   border-radius: 2px;
   display: flex;
   flex-direction: column;
+  transition: background .2s ease-out;
 
   .box1 {
     z-index: 4;
