Search button gradient color

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -912,8 +912,7 @@
     .btn {
       font-weight: 400;
       text-transform: capitalize;
-      color: @gray-444;
-      #gradient.vertical(#eaeaea; #f2f2f2; 0%; 100%);
+      #gradient.vertical(@gray-lighter; #f2f2f2; 0%; 100%);
 
       &.global-search-options-toggle {
         margin-left: -2px!important;
