--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -20,7 +20,7 @@
   border-radius: 2px;
   display: flex;
   flex-direction: column;
-  transition: background .2s ease-out;
+  transition: background 0.2s ease-out;
 
   .box1 {
     z-index: 4;
@@ -445,6 +445,7 @@
         &::before {
           color: @gridbox-text-light;
         }
+
         &.box-blue3,
         &.box-green3,
         &.box-grey3,
@@ -463,6 +464,7 @@
 /*
 * Mobile: All column types must behave like single column boxes
 */
+
 .gridbox {
   .all-single-column();
 
@@ -500,11 +502,13 @@
     &.outlined {
       &.with-img {
         border: 0!important;
+
         &.size2,
         &.size3 {
           &::before {
             color: @gridbox-text-light;
           }
+
           &.box-blue3,
           &.box-green3,
           &.box-grey3,
@@ -522,7 +526,6 @@
   }
 }
 @media all and (max-width: @screen-xs-max) {
-
   .gridbox {
     .text {
       display: none;
@@ -796,13 +799,12 @@
       .text {
         display: block;
       }
-      @media (min-width: @screen-md) {
-        &.with-img {
-          .box1 {
-            .header {
-              border-right: 0;
-              white-space: normal;
-            }
+
+      &.with-img {
+        .box1 {
+          .header {
+            border-right: 0;
+            white-space: normal;
           }
         }
       }
@@ -813,6 +815,12 @@
           color: inherit!important;
           border-right: 0;
           white-space: normal;
+        }
+      }
+
+      &.text-down {
+        &.box-light1 {
+          border: 1px solid @grey3;
         }
       }
     }
